Fix Java and Jetty deprecations (#10349)
Signed-off-by: Wouter Born <github@maindrain.net>
Signed-off-by: John Marshall <john.marshall.au@gmail.com>